fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -2277,7 +2277,7 @@ height: 100%;
 	margin-left: 119px;
 }
 /*конец футер*/
-.wrapper{
+.body{
 	overflow: hidden;
 }
 /*.......................................СТРАНИЦА 2...................*/
@@ -2569,7 +2569,7 @@ height: 100%;
 	position: relative;
 	top: -135px;
 	left: 105px;
-	z-index: 4;
+	z-index: 3;
 }
 
 .page3 .card-product .name-container{
@@ -3515,14 +3515,14 @@ height: 100%;
 
 @media only screen and (max-width:950px){
 	.header{
-		z-index: 4;
+		z-index: 3;
 	}
 
 	.banner-our-production{
 		position: static;
 		height: auto;
 		position: relative;
-		z-index: 3;
+		z-index: 2;
 		margin-top: -80px;
 		display: none;
 	}
